<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_post"
    android:padding="4dp"
    android:layout_margin="2dp">

    <ImageButton
        android:id="@+id/favBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:contentDescription="@string/favorite_or_not"
        android:scaleType="fitCenter"
        android:layout_gravity="end"
        android:src="@drawable/heart_filled"
        android:background="@drawable/background_post"/>
    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank_string"
        android:textSize="30sp"
        android:id="@+id/appUserRank"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="153dp"
        android:layout_height="155dp"
        android:layout_margin="3dp"
        android:background="@color/white"
        android:padding="6dp"
        android:src="@drawable/app_icon"
        app:shapeAppearanceOverlay="@style/Circular"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />
    <TextView
        android:id="@+id/appUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_user_title"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="4dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/appUserFollowerIcon"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/followers_displaying_icon"
            android:src="@drawable/user_follow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_followers"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:textAlignment="center"
            android:id="@+id/appUserFollower"
            />
    </LinearLayout>
</LinearLayout>