<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.signup.SignUpActivity"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:src="@drawable/app_icon"
        app:shapeAppearanceOverlay="@style/Circular"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/appUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/account_circle"
        android:hint="@string/user_name"
        android:inputType="text"
        android:minHeight="48dp"
        />
    <EditText
        android:id="@+id/appUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="username"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        />
    <EditText
        android:id="@+id/appUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/admin_panel_settings"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appAccountNotExist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="2dp"
        android:background="#FDF6FE"
        android:text="@string/already_have_account"
        android:textAllCaps="false"
        android:paddingEnd="19dp"
        android:paddingStart="5dp"
        android:elevation="0dp"
        />

    <Button
        android:id="@+id/appSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />


</LinearLayout>