<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:padding="4dp"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        >
        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:id="@+id/appUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginTop="4dp"
            />
        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/appUserPostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:layout_marginTop="3dp"
            />
        <TextView
            android:id="@+id/appPostInfo"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_data"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>