<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.posts.PostAddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_200"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_title_here" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyInputLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_200"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
            app:layout_constraintBottom_toTopOf="@id/postButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bodyEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_the_post_here"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:padding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/postButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/send_a_post"
        android:scaleType="fitXY"
        android:src="@drawable/send_post"
        android:textAllCaps="false"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bodyInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>